--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,23 +1,23 @@
-name: push
-run-name: ${{ github.actor }} pushing
-on: [push]
-
-jobs:
-  build-job:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Deploy using ssh
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
-          port: 22
-          script: |
-            cd vk-task
-            
-            git reset --hard
-            
-            git pull origin master
+#name: push
+#run-name: ${{ github.actor }} pushing
+#on: [push]
+#
+#jobs:
+#  build-job:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#
+#      - name: Deploy using ssh
+#        uses: appleboy/ssh-action@master
+#        with:
+#          host: ${{ secrets.HOST }}
+#          username: ${{ secrets.USERNAME }}
+#          key: ${{ secrets.PRIVATE_KEY }}
+#          port: 22
+#          script: |
+#            cd vk-task
+#
+#            git reset --hard
+#
+#            git pull origin master
