--- a/config/local.yaml
+++ b/config/local.yaml
@@ -3,7 +3,7 @@ logLevel: "debug"
 application:
   port: 1111
 storage:
-  host: localhost
+  host: postgres
   port: 5432
   user: postgres
   password: password
