--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,5 +22,11 @@ jobs:
             cd vk-task
 
             git reset --hard
-
+            
             git pull origin master
+            
+            docker stop application
+            
+            docker rm application
+
+            make docker-up
