--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,5 +28,7 @@ jobs:
             docker stop application
             
             docker rm application
+            
+            docker rmi application
 
             make docker-up
